tests/sksl/errors/OpaqueTypeAssignment.sksl
sampler a;
sampler b = a;
void main() {
    a = b;
}
